--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
     <!-- Hero Section -->
     <div class="hero-container">
         <video autoplay muted loop playsinline class="hero-video">
-            <source src="https://drive.google.com/file/d/1W32ZyuEUY21EDVj4UE4Y-D3poPhFNIwZ/view?usp=drive_link" type="video/mp4">
+            <source src="https://drive.google.com/file/d/1W32ZyuEUY21EDVj4UE4Y-D3poPhFNIwZ/view?usp=drive_link.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="overlay"></div>
